objects/tffa__BusinessCardHolder__c.object
<CustomObject>
    <description>Captures the personal information of the business card holder.</description>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>Account number. e.g. Account number captured for the credit card.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Card Holder address</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Business Card Holders</relationshipLabel>
        <relationshipName>BusinessCardHolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__BirthDate__c</fullName>
        <description>Date of birth</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__BusinessCardDetail__c</fullName>
        <description>Reference to parent business card detail object.</description>
        <label>Business Card Detail0</label>
        <referenceTo>tffa__BusinessCardDetail__c</referenceTo>
        <relationshipLabel>BusinessCardHolders</relationshipLabel>
        <relationshipName>BusinessCardHolders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__CDDStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type CDD.</description>
        <label>CDD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CardBINCode__c</fullName>
        <description>Bank Identification Number (“BIN”) or Issuer identification number (“IIN”) is the first six digits of a bank card number or payment
        cards number and it is part of ISO/IEC 7812.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Bank Identification Number (“BIN”) or Issuer identification number (“IIN”) is beneficial to identify a card brand, issuing
        institution or bank, country of issuance, card type and category of cards.</inlineHelpText>
        <label>Card BIN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CardNumber__c</fullName>
        <description>Card number (of applied card)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Card number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CardStatus__c</fullName>
        <description>Status of the credit card</description>
        <label>Card status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditCardStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EmbossedName__c</fullName>
        <description>Name as it would appear on a card.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Embossed name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FraudStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type FRAUD.</description>
        <label>Fraud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__FullName__c</fullName>
        <description>The unparsed name of either an individual or a legal entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Full name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IDAStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type IDA.</description>
        <label>IDA status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IDVStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type IDV.</description>
        <label>IDV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOutcome__c</fullName>
        <description>Outcome of a KYC decisioning process.</description>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If auto KYCDecisionOutcome was overridden.</description>
        <label>KYC Decision Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MaxSpendLimit__c</fullName>
        <description>Max spend limit for the card holder</description>
        <label>Max spend limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to related party.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>BusinessCardHolders</relationshipLabel>
        <relationshipName>BusinessCardHolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryEmail__c</fullName>
        <description>Primary email of the card holder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryPhone__c</fullName>
        <description>Primary phone number of the card holder.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Ssn__c</fullName>
        <description>SSN of the card holder</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ssn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Business Card Holder</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Business CardHolder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Card Holders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>